--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <title>Passer Desktop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    
+    <link rel="stylesheet" type="text/css" media="screen" href="public/css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+ 
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div class="app-menu-bar">Menu Bar</div>
+    <div class="app-main-window">
+        
+    </div>
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    <script src="public/bower_components/angular/angular.min.js"></script>
+    <script src="public/bower_components/angular-route/angular-route.js"></script>
+    <script src="public/js/main.js"></script>
 </body>
 </html>
